--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "scribere.sh",
     "private": true,
-    "version": "0.0.1",
     "type": "module",
+    "packageManager": "bun@1.2.10",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
@@ -33,6 +33,5 @@
         "typescript-eslint": "^8.20.0",
         "vite": "^6.2.6",
         "wrangler": "^4.14.1"
-    },
-    "packageManager": "yarn@4.7.0+sha512.5a0afa1d4c1d844b3447ee3319633797bcd6385d9a44be07993ae52ff4facabccafb4af5dcd1c2f9a94ac113e5e9ff56f6130431905884414229e284e37bb7c9"
+    }
 }
