--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@eslint/compat": "^1.2.5",
         "@eslint/js": "^9.18.0",
         "@sveltejs/adapter-auto": "^6.0.0",
+        "@sveltejs/adapter-cloudflare": "^7.0.2",
         "@sveltejs/kit": "^2.16.0",
         "@sveltejs/vite-plugin-svelte": "^5.0.0",
         "dprint": "^0.49.1",
