--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,4 +7,6 @@
     // Required Compat stuff
     "compatibility_date": "2025-02-27",
     "compatibility_flags": ["nodejs_compat"],
+
+    "pages_build_output_dir": ".svelte-kit/cloudflare",
 }
