--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
         "globals": "^16.0.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.5.1",
-        "svelte": "^5.0.0",
+        "svelte": "^5.33.18",
         "svelte-check": "^4.0.0",
         "typescript": "^5.0.0",
         "typescript-eslint": "^8.20.0",
         "vite": "^6.2.6",
         "wrangler": "^4.14.1"
+    },
+    "dependencies": {
+        "svelte-hamburger": "^1.0.1"
     }
 }
